--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 @import "./utils/variables";
 @import "./normalize";
+@import "./utils/breakpoints";
 @import "./components/page-header";
 @import "./components/hero__section";
 @import "./components/modal";
