--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,24 @@ p {
 .container {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1170px;
-  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 738px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
 }
 
 .section {
@@ -530,6 +543,21 @@ summary {
           align-items: center;
   text-align: center;
 }
+@media screen and (min-width: 480px) {
+  .hero__section {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__section {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__section {
+    width: 1200px;
+  }
+}
 
 .hero__title {
   color: var(--primary-white-color);
@@ -570,9 +598,17 @@ summary {
   padding: 40px 40px 0;
 }
 
-.feature {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (max-width: 1200px) {
+  .feature {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .feature__title {
@@ -580,10 +616,33 @@ summary {
   margin-bottom: -30px;
 }
 
-.feature__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 480px) {
+  .feature__list {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .feature__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+.feature__list--title {
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
@@ -591,12 +650,27 @@ summary {
   text-transform: uppercase;
   color: var(--title-text-color);
 }
-@media (max-width: 480px) {
-  .feature__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+@media screen and (max-width: 767px) {
+  .feature__list--title {
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .feature__item {
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .feature__item {
+    width: calc((100% - 90px) / 2);
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__item {
+    width: calc((100% - 150px) / 4);
+    margin: 15px;
   }
 }
 
@@ -605,8 +679,6 @@ summary {
 }
 
 .feature__icon {
-  width: 270px;
-  height: 120px;
   background: var(--backgroynd-color-two);
   border: 1px solid var(--backgroynd-color-two);
   border-radius: 4px;
@@ -627,10 +699,23 @@ summary {
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.feature__item:not(:last-child) {
-  padding-right: 30px;
-  padding-bottom: 10px;
+@media screen and (min-width: 480px) {
+  .feature__icon {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .feature__icon {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .feature__icon {
+    width: 270px;
+    height: 120px;
+  }
 }
 
 .feature__text {
@@ -644,6 +729,7 @@ summary {
 }
 
 .works {
+  display: none;
   padding-bottom: 94px;
   text-align: center;
 }
@@ -693,9 +779,19 @@ summary {
 }
 
 .comanda {
-  padding-top: 94px;
-  padding-bottom: 94px;
   background-color: var(--backgroynd-color-two);
+}
+@media screen and (max-width: 1200px) {
+  .comanda {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .comanda {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .comanda__title {
@@ -709,16 +805,30 @@ summary {
   color: var(--title-text-color);
 }
 
-.comanda__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+@media screen and (min-width: 480px) {
+  .comanda__list {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .comanda__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .comanda__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 
 .comanda__item {
@@ -727,6 +837,23 @@ summary {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+@media screen and (max-width: 767px) {
+  .comanda__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .comanda__item {
+    width: calc((100% - 90px) / 2);
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .comanda__item {
+    width: calc((100% - 150px) / 4);
+    margin: 15px;
+  }
 }
 
 .name-container {
@@ -754,9 +881,17 @@ summary {
   fill: var(--oformleni-color);
 }
 
-.customers {
-  padding-top: 94px;
-  padding-bottom: 94px;
+@media screen and (max-width: 1200px) {
+  .customers {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .customers {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .customers__title {
@@ -779,6 +914,10 @@ summary {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: -15px;
 }
 
 .box__link {
@@ -805,15 +944,17 @@ summary {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.box__item:not(:last-child) {
-  margin-right: 30px;
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (max-width: 767px) {
+  .box__item {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
 }
-.box__item:not(:last-child):focus, .box__item:not(:last-child):hover .box__icon {
-  fill: var(--accent-color);
-  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .box__item {
+    width: calc((100% - 90px) / 3);
+    margin: 15px;
+  }
 }
 
 .box__icon {
@@ -829,7 +970,24 @@ summary {
 
 .footer {
   background-color: var(--background-color-wan);
-  padding: 60px 0 50px 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.logotip {
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--title-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .logotip {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .footer__logo--color {
@@ -844,6 +1002,11 @@ summary {
 .footer__address {
   color: var(--primary-white-color);
   display: block;
+}
+@media screen and (max-width: 767px) {
+  .footer__address {
+    text-align: center;
+  }
 }
 
 .address {
@@ -873,34 +1036,90 @@ summary {
           align-items: center;
 }
 
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (max-width: 767px) {
+  .footer__container {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .social {
   padding-left: 70px;
 }
 
+.social__title {
+  color: var(--primary-white-color);
+  margin-top: 12px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 767px) {
+  .social__title {
+    text-align: center;
+  }
+}
+
 .social__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
+}
+@media screen and (max-width: 767px) {
+  .social__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 10px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (mmin-width: 1200px) {
+  .social__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 10px;
+  }
 }
 
-.social__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-right: 10px;
+@media screen and (min-width: 480px) {
+  .social__item {
+    display: block;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .social__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 10px;
+  }
 }
 
 .social__link {
@@ -941,24 +1160,6 @@ summary {
   fill: var(--primary-white-color);
 }
 
-.social__list {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin-top: 10px;
-}
-
-.social__title {
-  color: var(--primary-white-color);
-  margin-top: 12px;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
 /* activ */
 .activ-menu {
   padding-top: 10px;
@@ -966,9 +1167,6 @@ summary {
 }
 
 .subscription__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -980,10 +1178,12 @@ summary {
   color: #ffffff;
 }
 
-.subscription__mailing {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .subscription__mailing {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .subscription__input {
@@ -1371,7 +1571,24 @@ summary {
 
 .footer {
   background-color: var(--background-color-wan);
-  padding: 60px 0 50px 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.logotip {
+  text-decoration: none;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  color: var(--title-text-color);
+}
+@media screen and (min-width: 1200px) {
+  .logotip {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .footer__logo--color {
@@ -1386,6 +1603,11 @@ summary {
 .footer__address {
   color: var(--primary-white-color);
   display: block;
+}
+@media screen and (max-width: 767px) {
+  .footer__address {
+    text-align: center;
+  }
 }
 
 .address {
@@ -1415,34 +1637,90 @@ summary {
           align-items: center;
 }
 
-.footer__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (max-width: 767px) {
+  .footer__container {
+    display: block;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .social {
   padding-left: 70px;
 }
 
+.social__title {
+  color: var(--primary-white-color);
+  margin-top: 12px;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 767px) {
+  .social__title {
+    text-align: center;
+  }
+}
+
 .social__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: relative;
+}
+@media screen and (max-width: 767px) {
+  .social__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 10px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media screen and (mmin-width: 1200px) {
+  .social__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-top: 10px;
+  }
 }
 
-.social__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  padding-right: 10px;
+@media screen and (min-width: 480px) {
+  .social__item {
+    display: block;
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .social__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-right: 10px;
+  }
 }
 
 .social__link {
@@ -1483,24 +1761,6 @@ summary {
   fill: var(--primary-white-color);
 }
 
-.social__list {
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  margin-top: 10px;
-}
-
-.social__title {
-  color: var(--primary-white-color);
-  margin-top: 12px;
-  margin-bottom: 20px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
 /* activ */
 .activ-menu {
   padding-top: 10px;
@@ -1508,9 +1768,6 @@ summary {
 }
 
 .subscription__title {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -1522,10 +1779,12 @@ summary {
   color: #ffffff;
 }
 
-.subscription__mailing {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+@media screen and (min-width: 1200px) {
+  .subscription__mailing {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .subscription__input {
