--- a/sass/components/_comanda.scss
+++ b/sass/components/_comanda.scss
@@ -1,6 +1,13 @@
 .comanda {
-  padding-top: 94px;
-  padding-bottom: 94px;
+
+  @media screen and (max-width: 1200px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   background-color: var(--backgroynd-color-two);
 }
 
@@ -16,9 +23,21 @@
 }
 
 .comanda__list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+@media screen and (min-width: 480px) {
+    display: block;
+  }
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+  }
 }
 
 .comanda__item {
@@ -27,7 +46,24 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+
+  &:not(:last-child) {
+    @media screen and (max-width: 767px){
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 3 * 30px) / 2);
+    margin: 15px;
+    }
+
+   @media screen and (min-width: 1200px) {
+    width: calc((100% - 5 * 30px) / 4);
+    margin: 15px;
+  }
 }
+
 
 .name-container {
   padding: 30px 0;
