--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,6 +1,12 @@
 .customers {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @media screen and (max-width: 1200px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .customers__title {
@@ -17,6 +23,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
 }
 
 .box__link {
@@ -37,15 +46,26 @@
       }
 }
 
-.box__item:not(:last-child) {
-  margin-right: 30px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus,
-  &:hover .box__icon {
-      fill: var(--accent-color);
-      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.box__item {
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 2* 30px) / 2);
+    margin: 15px;
     }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+  //   @media screen and (min-width: 1200px) {
+  //   width: calc(100%  / 6);
+  // }
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:focus,
+//   &:hover .box__icon {
+//   fill: var(--accent-color);
+//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
 }
+
 
 
 .box__icon {
