--- a/sass/components/_hero__section.scss
+++ b/sass/components/_hero__section.scss
@@ -13,6 +13,18 @@
   display: flex;
   align-items: center;
   text-align: center;
+
+  @media screen and (min-width: 480px) {
+      width: 480px;
+    }
+  
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+  
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+    }
 }
 
 .hero__title {
