--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -37,13 +37,24 @@ p {
 .container {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1170px;
-  width: 100%;
+
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-}
 
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 738px;
+  }
+
+     @media screen and (min-width: 1200px) {
+       width: 1170px;
+     }
+}
+  
 .section {
   padding-bottom: 94px;
 }
