--- a/sass/components/_hero__section.scss
+++ b/sass/components/_hero__section.scss
@@ -13,6 +13,7 @@
   display: flex;
   align-items: center;
   text-align: center;
+  position: relative;
 
   @media screen and (min-width: 480px) {
       width: 480px;
