--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -23,11 +23,31 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  display: flex;
   flex-wrap: wrap;
   margin: -15px;
 }
 
+.box__item {
+  @media screen and (max-width: 767px) {
+    width: calc((100% - 2* 30px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+
+  //   @media screen and (min-width: 1200px) {
+  //   width: calc(100%  / 6);
+  // }
+  //   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  //   &:focus,
+  //   &:hover .box__icon {
+  //   fill: var(--accent-color);
+  //   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
+}
 .box__link {
   display: inline-flex;
   align-items: center;
@@ -38,35 +58,18 @@
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:focus,
-    &:hover {
-        border: 1px solid #2196f3;
-        outline: 0px solid var(--accent-color);
-        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      }
-}
-
-.box__item {
-  @media screen and (max-width: 767px) {
-    width: calc((100% - 2* 30px) / 2);
-    margin: 15px;
-    }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    width: calc((100% - 3 * 30px) / 3);
-    margin: 15px;
+  &:focus,
+  &:hover {
+    border: 1px solid #2196f3;
+    outline: 0px solid var(--accent-color);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  //   @media screen and (min-width: 1200px) {
-  //   width: calc(100%  / 6);
-  // }
-//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-//   &:focus,
-//   &:hover .box__icon {
-//   fill: var(--accent-color);
-//   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
+
+  @media screen and (max-width: 1199px) {
+    width: 100%;
+  }
+
 }
-
-
 
 .box__icon {
   fill: var(--oformleni-color);
