--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -80,47 +80,59 @@
 }
 
 .social {
+  @media screen and (max-width: 767px) {
+  margin-top: 60px;
+  }
+  @media screen and (max-width: 1199px) {
+  margin-top: 60px;
+  }
+  @media screen and (min-width: 1200px) {
   padding-left: 70px;
 }
-
+}
 
 .social__title {
   color: var(--primary-white-color);
-  margin-top: 12px;
-  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-@media screen and (max-width: 767px) {
-    text-align: center;
-  }
+// @media screen and (max-width: 767px) {
+//   display: block;
+//   text-align: center;
+//   padding-bottom: 20px;
+//   }
+@media screen and (max-width: 1199px) {
+  display: block;
+  text-align: center;
+  padding-bottom: 20px;
 }
+}
+
 .social__list {
   display: flex;
   @media screen and (max-width: 767px) {
     display: flex;
-    margin-top: 10px;
     align-items: center;
     justify-content: center;
-}
-   @media screen and (mmin-width: 1200px) {
-   display: flex;
-          margin-top: 10px;
-     
+  }
+  @media screen and (mmin-width: 1200px) {
+    display: flex;
+    margin-top: 12px;
+    margin-bottom: 20px;
 }
 }
 .social__item {
   @media screen and (min-width: 480px) {
-      display: block;
-      text-align: center;
-    }
-     @media screen and (min-width: 1200px) {
-          display: flex;
-          justify-content: center;
-          padding-right: 10px;
-      }
+    display: block;
+    text-align: center;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    justify-content: center;
+    padding-right: 10px;
+  }
  
 }
 
@@ -139,17 +151,17 @@
         outline: 0;
         transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
-            &:hover .social__icons,
-            &:focus .social__icons {
-              fill: var(--primary-white-color);
-              transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            }
+    &:hover .social__icons,
+    &:focus .social__icons {
+      fill: var(--primary-white-color);
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
-            &:hover .social-icon-comand,
-            &:focus .social-icon-comand {
-              fill: var(--primary-white-color);
-              transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-            }
+    &:hover .social-icon-comand,
+    &:focus .social-icon-comand {
+      fill: var(--primary-white-color);
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
 }
 
@@ -162,8 +174,16 @@
 
 /* activ */
 .activ-menu {
-  padding-top: 10px;
-  padding-left: 93px;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 60px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 10px;
+    padding-left: 93px;
+    }
 }
 
 .subscription__title {
@@ -175,20 +195,24 @@
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  padding-bottom: 20px;
   color: #ffffff;
+
+  @media screen and (max-width: 1199px) {
+    display: block;
+    text-align: center;
+    padding-bottom: 20px;
+  }
+  
 }
 
 .subscription__mailing {
   @media screen and (min-width: 1200px) {
       display: flex;
-
     }
 
 }
 
 .subscription__input {
-  width: 358px;
   height: 50px;
   background-color: rgba(255, 255, 255, 0);
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -206,14 +230,33 @@
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  @media screen and (max-width: 1199px){ 
+    width: 100%;
+  }
+  @media screen and (min-width: 1200px){ 
+    width: 358px;
+  }
 }
 
 .subscription__button {
-  position: relative;
-  display: flex;
+  
   width: 200px;
   height: 50px;
-  margin-left: 12px;
+  @media screen and (max-width: 767px) {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  @media screen and (min-width: 768px){ 
+  
+  }
+  @media screen and (min-width: 1200px){ 
+    position: relative;
+    display: flex;
+    margin-left: 12px;
+}
 }
 
 .subscription__icon {
