--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,10 +1,24 @@
 .backdrop {
+
+@media screen and (max-width: 1199px) {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 30px 15px;
+  overflow-y: scroll;
+}
+  @media screen and (min-width: 1200px) {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  padding: 50px 30px;
+  overflow-y: scroll;
+}
 }
 
 .backdrop.is-hidden {
@@ -13,13 +27,34 @@
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   transform: translate(-50%, -50%);
-  min-height: 541px;
-  min-width: 448px;
   border-radius: 14px;
   background-color: var(--primary-white-color);
   padding: 40px 40px 0;
+
+@media screen and (max-width: 520px) {
+  margin-top: 93px;
+  position:fixed;
+  top: 45%;
+  left: 46%;
+  min-width: 75%;
+  margin: 93px 15px 50px 15px;
+  }
+@media screen  and (min-width: 521px) and (max-width: 1199px) {
+  margin-top: 93px;
+  position:fixed;
+  top: 45%;
+  left: 46%;
+  width: 370px;
+  margin: 93px 15px 50px 15px;
+}
+       
+@media screen and (min-width: 1200px) {
+  margin-top: 203px;
+  position: absolute;
+  top: 75%;
+  left: 50%;
+  min-width: 528px;
+  
+  }
 }
