--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,12 +2,14 @@
 .page-header {
   background: var(--primary-white-color);
   border-bottom: 1px solid var(--border-color);
+  
+  position: relative;
 }
 
 .header-inner {
-  display: flex;
-  justify-content: space-between;
-  padding: 24.5px 0;
+  // display: flex;
+  // justify-content: space-between;
+  // padding: 24.5px 0;
 }
 
 .list {
@@ -15,7 +17,7 @@
 }
 
 .logo {
-  display: flex;
+  // display: flex;
   text-decoration: none;
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -29,8 +31,8 @@
 }
 
 .page-header__list {
-  display: flex;
-  margin-left: 93px;
+  // display: flex;
+  // margin-left: 93px;
   font-size: 15px;
   line-height: 1.2;
   text-decoration: none;
@@ -42,19 +44,28 @@
 }
 
 .page-header__nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  // display: flex;
+  // align-items: center;
+  // justify-content: space-between;
 }
 
+.page-header__menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+background-color: antiquewhite;
+text-align: center;
+display: block;
+}
 .page-header__list {
-  justify-content: flex-end;
+  // justify-content: flex-end;
 
 }
 
 .page-header__link {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
   color: var(--text-color);
   text-decoration: none;
   color: var(--title-text-color);
@@ -82,12 +93,12 @@
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.page-header__nav--list {
-  position: relative;
+.page-header__list--contact {
+  // position: relative;
 }
 
 .page-header__link--active {
-  position: relative;
+  // position: relative;
   color: var(--accent-color);
 }
 
@@ -116,8 +127,8 @@
 }
 
 .page-header__item {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
   color: var(--background-color-wan);
   justify-content: space-evenly;
   fill: var(--text-color);
