--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -34,6 +34,12 @@ p {
   padding: 0;
 }
 
+img {
+  // display: block;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
 .container {
   margin-right: auto;
   margin-left: auto;
