--- a/sass/components/_comanda.scss
+++ b/sass/components/_comanda.scss
@@ -54,12 +54,12 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: calc((100% - 3 * 30px) / 2);
+    width: calc((100% - 2 * 30px) / 2);
     margin: 15px;
     }
 
    @media screen and (min-width: 1200px) {
-    width: calc((100% - 5 * 30px) / 4);
+    width: calc((100% - 4 * 30px) / 4);
     margin: 15px;
   }
 }
@@ -81,6 +81,10 @@
   line-height: 1.19;
   margin-bottom: 10px;
   color: var(--title-text-color);
+
+  @media screen and (min-width: 768px) {
+    padding-top: 30px;
+  }
 }
 
 .p-name {
