--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -1,7 +1,11 @@
 .works {
-  display: none;
+@media screen and (min-width: 1200px) {
   padding-bottom: 94px;
   text-align: center;
+}
+@media screen and (max-width: 1199px) {
+    display: none;
+}
 }
 
 .works__title {
