--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -32,6 +32,8 @@
 
 .footer__pozition {
   @media screen and (min-width: 767px) {
+  padding-left: 15px;
+  padding-right: 15px;
   display: flex;
   justify-content: space-between;
   }
@@ -89,8 +91,8 @@
   @media screen and (max-width: 767px) {
   margin-top: 60px;
   }
-  @media screen and (max-width: 1199px) {
-  margin-top: 60px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+  margin-top: 5px;
   }
   @media screen and (min-width: 1200px) {
   padding-left: 70px;
@@ -106,20 +108,18 @@
   text-transform: uppercase;
   padding-bottom: 20px;
 // @media screen and (max-width: 767px) {
-//   display: block;
-//   text-align: center;
+
 //   padding-bottom: 20px;
 //   }
   @media screen and (max-width: 1199px) {
   display: block;
   text-align: center;
   }
-}
-// @media screen and (min-width: 1200px) {
-//   padding-bottom: 20px;
-// }
-// }
 
+@media screen and (min-width: 1200px) {
+  padding-top: 12px;
+}
+}
 .social__list {
   display: flex;
 
@@ -184,7 +184,7 @@
 /* activ */
 .activ-menu {
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     padding-top: 60px;
     margin-right: auto;
     margin-left: auto;
@@ -193,7 +193,7 @@
     display: block;
   }
   @media screen and (min-width: 1200px) {
-    padding-top: 10px;
+    padding-top: 12px;
     padding-left: 93px;
   }
 }
@@ -214,6 +214,10 @@
     text-align: center;
     padding-bottom: 20px;
   }
+    @media screen and (min-width: 1200px) {
+    display: block;
+    padding-bottom: 20px;
+    }
 }
 
 .subscription__mailing {
@@ -242,7 +246,9 @@
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   @media screen and (max-width: 1199px){ 
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 450px;
   }
   @media screen and (min-width: 1200px){ 
     width: 358px;
@@ -252,14 +258,15 @@
 .subscription__button {
   width: 200px;
   height: 50px;
-  @media screen and (max-width: 767px) {
+  padding: 10px 28px 10px 29px;
+
+  @media screen and (max-width: 1199px) {
+    position: relative;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     display: block;
-  }
-  @media screen and (min-width: 768px){ 
-  
+    text-align: left;
   }
   @media screen and (min-width: 1200px){ 
     position: relative;
