--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,28 +2,37 @@
 .page-header {
   background: var(--primary-white-color);
   border-bottom: 1px solid var(--border-color);
-  
   position: relative;
 }
 
 .header-inner {
-  // display: flex;
-  // justify-content: space-between;
-  // padding: 24.5px 0;
+display: block;
 }
 
-.list {
-  list-style: none;
-}
+.page-header__nav {
+  @media screen and (min-width: 768px) {
+  display: flex;
+  }
+  
+ }
 
 .logo {
-  // display: flex;
-  text-decoration: none;
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
+text-decoration: none;
+font-family: Raleway, sans-serif;
+color: var(--title-text-color);
+font-weight: 700;
+line-height: 1.17;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  padding: 26px 0;
+}
+@media screen and (max-width: 1199px) {
+  font-size: 24px;
+}
+@media screen and (min-width: 1200px) {
+  display: flex;
   font-size: 26px;
-  line-height: 1.19;
-  color: var(--title-text-color);
+  padding: 24px 0 25px 15px;
+}
 }
 
 .logo-color {
@@ -31,37 +40,49 @@
 }
 
 .page-header__list {
-  // display: flex;
-  // margin-left: 93px;
-  font-size: 15px;
-  line-height: 1.2;
+  display: flex;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
   text-decoration: none;
 }
 
-.page-header__item:not(:last-child) {
+.page-header__item--nav:not(:last-child) {
+@media screen and (min-width: 768px) {
   margin-left: 0;
   margin-right: 50px;
 }
-
-.page-header__nav {
-  // display: flex;
-  // align-items: center;
-  // justify-content: space-between;
 }
 
-.page-header__menu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-background-color: antiquewhite;
-text-align: center;
-display: block;
+.page-header__item--contact:not(:last-child) {
+@media screen and (min-width: 768px) {
+  margin-bottom: 10px;
+  }
+  
+@media screen and (min-width: 1200px) {
+  margin-left: 0;
+  margin-right: 50px;
 }
-.page-header__list {
-  // justify-content: flex-end;
+}
 
-}
+
+// .page-header__menu {
+// @media screen and (max-width: 767px){
+// position: absolute;
+// top: 100%;
+// left: 0;
+// width: 100%;
+// background-color: antiquewhite;
+// text-align: center;
+// display: block;
+// }
+// @media screen and (min-width: 768px) {
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+// }
+// }
 
 .page-header__link {
   // display: flex;
@@ -76,6 +97,10 @@ display: block;
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
 
     &:hover {
       color: var(--accent-color);
@@ -93,12 +118,33 @@ display: block;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.page-header__list--nav {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  padding-top: 32px;
+  margin-left: 88px;
+  }
+
+@media screen and (min-width: 1200px) {
+  margin-left: 93px;
+  padding-top: 32px;
+}
+}
+
 .page-header__list--contact {
-  // position: relative;
+  position: relative;
+@media screen and (min-width: 768px)and(max-width: 1199px) {
+  display: block;
+  padding-top: 21px;
+  margin-left: 84px;
+  }
+@media screen and (min-width: 1200px) {
+  margin-left: 305px;
+  padding-top: 32px;
+  }
 }
 
 .page-header__link--active {
-  // position: relative;
+  position: relative;
   color: var(--accent-color);
 }
 
@@ -150,7 +196,7 @@ display: block;
   letter-spacing: 0.03em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+   padding: 10px 32px 10px 32px;
     &:hover {
         color: var(--accent-color);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -166,9 +212,7 @@ display: block;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
-  padding: 10px 32px 10px 32px;
-
-    &:hover {
+  &:hover {
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
       }
