--- a/css/styles.css
+++ b/css/styles.css
@@ -1418,18 +1418,38 @@ summary {
 }
 
 /* Меню */
-.menu {
-  padding-top: 94px;
-  padding-bottom: 50px;
+@media screen and (max-width: 767px) {
+  .menu {
+    padding-top: 45px;
+    padding-bottom: 40px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu {
+    padding-top: 94px;
+    padding-bottom: 50px;
+  }
 }
 
 .menu__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
+}
+
+.menu__items--padding {
+  padding-right: 103px;
 }
 
 .menu__items {
@@ -1439,6 +1459,11 @@ summary {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+@media screen and (max-width: 767px) {
+  .menu__items {
+    margin-top: 15px;
+  }
 }
 
 .menu__button {
@@ -1477,8 +1502,15 @@ summary {
 }
 
 /* <-- група послуг --> */
-.services {
-  padding-bottom: 94px;
+@media screen and (max-width: 1199px) {
+  .services {
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services {
+    padding-bottom: 94px;
+  }
 }
 
 .services__list {
@@ -1487,12 +1519,15 @@ summary {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin: -15px;
+}
+@media screen and (max-width: 767px) {
+  .services__list {
+    margin: 0;
+  }
 }
 
 .services__item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
   border: 0px solid var(--backgroynd-color-two);
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1516,19 +1551,48 @@ summary {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 767px) {
+  .services__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .services__item {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .services__item {
+    width: calc((100% - 60px) / 2);
+    margin: 15px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .services__item {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
 
 .services__item img {
   display: block;
 }
 
-.services__item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .services__item:nth-last-child(1) {
+    margin-bottom: 0;
+  }
 }
+@media screen and (min-width: 1200px) {
+  .services__item:nth-child(3n) {
+    margin-right: 0;
+  }
 
-.services__item:nth-last-child(-n+3) {
-  margin-bottom: 0;
+  .services__item:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
-
 .services__link {
   text-decoration: none;
   position: relative;
@@ -1567,6 +1631,12 @@ summary {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .services__section--padding {
+    padding-bottom: 56px;
+  }
 }
 
 .services__name {
