--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,44 +1,74 @@
 /* <-- група послуг --> */
 
 .services {
-
-  padding-bottom: 94px;
+  @media screen and (max-width: 1199px) {
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+  }
 }
 
 .services__list {
   display: flex;
   flex-wrap: wrap;
+  margin: -15px;
+  @media screen and (max-width: 767px) {
+    margin: 0;
+  }
 }
 
 .services__item {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
   border: 0px solid var(--backgroynd-color-two);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      &:hover .services__fon {
-        transform: translateY(-100%);
-        opacity: 1;
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      }
-      &:hover,
-      &:focus {
-        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+  &:hover .services__fon {
+    transform: translateY(-100%);
+    opacity: 1;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  &:hover,
+  &:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
           0px 2px 2px rgba(0, 0, 0, 0.12);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-      }
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+&:not(:last-child) {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 30px;
+    }
+  }
+  @media screen and (max-width: 767px) {
+    width: 100%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 370px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }    
 }
+
 
 .services__item img {
   display: block;
 }
 
-.services__item:nth-child(3n) {
-  margin-right: 0;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .services__item:nth-last-child(1) {
+  margin-bottom: 0;
+  }
 }
 
-.services__item:nth-last-child(-n + 3) {
+@media screen and (min-width: 1200px) {
+  .services__item:nth-child(3n) {
+  margin-right: 0;
+  }
+  .services__item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
 }
 
 .services__link {
@@ -76,6 +106,12 @@
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
+}
+
+.services__section--padding {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+      padding-bottom: 56px;
+    }
 }
 
 .services__name {
