--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -17,14 +17,20 @@
 }
 
 .menu__list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:baseline;
-
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-wrap: wrap;
+}
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .menu__items--padding {
-  padding-right: 103px;
+  @media screen and (max-width: 767px) {
+  padding-right: 10px;
+}
 }
 
 .menu__items {
